kubernetes/darkmore/vault/tls-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: vault
spec:
  rules:
    - backendRefs:
        - kind: Service
          name: vault-active
          port: 8200
          weight: 1
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-tailscale-internal
      namespace: kgateway-system
